--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ### IntelliJ IDEA ###
 out/
+.idea/
+producer-consumer.iml
 !**/src/main/**/out/
 !**/src/test/**/out/
 
@@ -28,5 +30,4 @@ bin/
 ### Mac OS ###
 .DS_Store
 
-/.idea/
-/lab2-producer-consumer.iml
+
